y.output
   0  $accept : Prog $end

   1  $$1 :

   2  Prog : PROGRAM ID SCOLON $$1 Decls SubProgs CompStat

   3  Decls :

   4  $$2 :

   5  Decls : VAR $$2 DeclList

   6  DeclList : Declaration
   7           | DeclList Declaration

   8  Declaration : Type ElemList SCOLON

   9  Type : INT
  10       | FLOAT
  11       | CHAR
  12       | LOGIC

  13  ElemList : Elem

  14  $$3 :

  15  ElemList : ElemList COMMA $$3 Elem

  16  $$4 :

  17  Elem : ID $$4 DimList

  18  DimList :
  19          | DimList Dim

  20  Dim : OPBRAK INTCT CLBRAK

  21  SubProgs :
  22           | SubProgs SubProgDecl

  23  SubProgDecl : Header Decls CompStat

  24  Header : FuncHeader
  25         | ProcHeader

  26  $$5 :

  27  $$6 :

  28  FuncHeader : FUNCTION $$5 Type ID OPPAR $$6 FuncHeaderAux

  29  FuncHeaderAux : CLPAR SCOLON
  30                | ParamList CLPAR SCOLON

  31  $$7 :

  32  ProcHeader : PROCEDURE ID OPPAR $$7 CLPAR SCOLON

  33  $$8 :

  34  ProcHeader : PROCEDURE ID OPPAR $$8 ParamList CLPAR SCOLON

  35  ParamList : Parameter

  36  $$9 :

  37  ParamList : ParamList COMMA $$9 Parameter

  38  Parameter : Type ID

  39  $$10 :

  40  CompStat : OPBRACE $$10 StatList CLBRACE

  41  StatList :
  42           | StatList Statement

  43  Statement : CompStat
  44            | IfStat
  45            | WhileStat
  46            | RepeatStat
  47            | ForStat
  48            | ReadStat
  49            | WriteStat
  50            | AssignStat
  51            | CallStat
  52            | ReturnStat
  53            | SCOLON

  54  $$11 :

  55  $$12 :

  56  $$13 :

  57  $$14 :

  58  IfStat : IF OPPAR $$11 Expression CLPAR $$12 $$13 Statement $$14 ElseStat

  59  ElseStat :

  60  $$15 :

  61  ElseStat : ELSE $$15 Statement

  62  $$16 :

  63  $$17 :

  64  $$18 :

  65  WhileStat : WHILE OPPAR $$16 Expression CLPAR $$17 $$18 Statement

  66  $$19 :

  67  $$20 :

  68  $$21 :

  69  RepeatStat : REPEAT $$19 Statement WHILE OPPAR $$20 Expression CLPAR SCOLON $$21

  70  $$22 :

  71  $$23 :

  72  $$24 :

  73  $$25 :

  74  $$26 :

  75  $$27 :

  76  ForStat : FOR OPPAR $$22 Variable ASSIGN $$23 Expression SCOLON $$24 Expression SCOLON $$25 Variable ASSIGN $$26 Expression CLPAR $$27 Statement

  77  $$28 :

  78  ReadStat : READ OPPAR $$28 ReadList CLPAR SCOLON

  79  ReadList : Variable

  80  $$29 :

  81  ReadList : ReadList COMMA $$29 Variable

  82  $$30 :

  83  WriteStat : WRITE OPPAR $$30 WriteList CLPAR SCOLON

  84  WriteList : WriteElem

  85  $$31 :

  86  WriteList : WriteList COMMA $$31 WriteElem

  87  WriteElem : STRING
  88            | Expression

  89  $$32 :

  90  CallStat : CALL ID OPPAR $$32 CLPAR SCOLON

  91  $$33 :

  92  CallStat : CALL ID OPPAR $$33 ExprList CLPAR SCOLON

  93  $$34 :

  94  ReturnStat : RETURN $$34 SCOLON

  95  $$35 :

  96  ReturnStat : RETURN $$35 Expression SCOLON

  97  $$36 :

  98  $$37 :

  99  $$38 :

 100  AssignStat : $$36 Variable ASSIGN $$37 Expression SCOLON $$38

 101  ExprList : Expression

 102  $$39 :

 103  ExprList : ExprList COMMA $$39 Expression

 104  Expression : AuxExpr1

 105  $$40 :

 106  Expression : Expression OR $$40 AuxExpr1

 107  AuxExpr1 : AuxExpr2

 108  $$41 :

 109  AuxExpr1 : AuxExpr1 AND $$41 AuxExpr2

 110  AuxExpr2 : AuxExpr3

 111  $$42 :

 112  AuxExpr2 : NOT $$42 AuxExpr3

 113  AuxExpr3 : AuxExpr4

 114  $$43 :

 115  AuxExpr3 : AuxExpr4 RELOP $$43 AuxExpr4

 116  AuxExpr4 : Term

 117  $$44 :

 118  AuxExpr4 : AuxExpr4 ADOP $$44 Term

 119  Term : Factor

 120  $$45 :

 121  Term : Term MULTOP $$45 Factor

 122  Factor : Variable
 123         | INTCT
 124         | FLOATCT
 125         | CHARCT
 126         | TRUE
 127         | FALSE

 128  $$46 :

 129  Factor : NEG $$46 Factor

 130  $$47 :

 131  Factor : OPPAR $$47 Expression CLPAR
 132         | FuncCall

 133  $$48 :

 134  Variable : ID $$48 SubscrList

 135  SubscrList :
 136             | SubscrList Subscript

 137  $$49 :

 138  $$50 :

 139  Subscript : OPBRAK $$49 AuxExpr4 CLBRAK $$50

 140  $$51 :

 141  FuncCall : ID OPPAR $$51 CLPAR

 142  $$52 :

 143  FuncCall : ID OPPAR $$52 ExprList CLPAR

state 0
	$accept : . Prog $end  (0)

	PROGRAM  shift 1
	.  error

	Prog  goto 2


state 1
	Prog : PROGRAM . ID SCOLON $$1 Decls SubProgs CompStat  (2)

	ID  shift 3
	.  error


state 2
	$accept : Prog . $end  (0)

	$end  accept


state 3
	Prog : PROGRAM ID . SCOLON $$1 Decls SubProgs CompStat  (2)

	SCOLON  shift 4
	.  error


state 4
	Prog : PROGRAM ID SCOLON . $$1 Decls SubProgs CompStat  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 5


state 5
	Prog : PROGRAM ID SCOLON $$1 . Decls SubProgs CompStat  (2)
	Decls : .  (3)

	VAR  shift 6
	FUNCTION  reduce 3
	PROCEDURE  reduce 3
	OPBRACE  reduce 3

	Decls  goto 7


state 6
	Decls : VAR . $$2 DeclList  (5)
	$$2 : .  (4)

	.  reduce 4

	$$2  goto 8


state 7
	Prog : PROGRAM ID SCOLON $$1 Decls . SubProgs CompStat  (2)
	SubProgs : .  (21)

	.  reduce 21

	SubProgs  goto 9


state 8
	Decls : VAR $$2 . DeclList  (5)

	CHAR  shift 10
	FLOAT  shift 11
	INT  shift 12
	LOGIC  shift 13
	.  error

	DeclList  goto 14
	Declaration  goto 15
	Type  goto 16


state 9
	Prog : PROGRAM ID SCOLON $$1 Decls SubProgs . CompStat  (2)
	SubProgs : SubProgs . SubProgDecl  (22)

	FUNCTION  shift 17
	PROCEDURE  shift 18
	OPBRACE  shift 19
	.  error

	CompStat  goto 20
	SubProgDecl  goto 21
	Header  goto 22
	FuncHeader  goto 23
	ProcHeader  goto 24


state 10
	Type : CHAR .  (11)

	.  reduce 11


state 11
	Type : FLOAT .  (10)

	.  reduce 10


state 12
	Type : INT .  (9)

	.  reduce 9


state 13
	Type : LOGIC .  (12)

	.  reduce 12


state 14
	Decls : VAR $$2 DeclList .  (5)
	DeclList : DeclList . Declaration  (7)

	CHAR  shift 10
	FLOAT  shift 11
	INT  shift 12
	LOGIC  shift 13
	FUNCTION  reduce 5
	PROCEDURE  reduce 5
	OPBRACE  reduce 5

	Declaration  goto 25
	Type  goto 16


state 15
	DeclList : Declaration .  (6)

	.  reduce 6


state 16
	Declaration : Type . ElemList SCOLON  (8)

	ID  shift 26
	.  error

	ElemList  goto 27
	Elem  goto 28


state 17
	FuncHeader : FUNCTION . $$5 Type ID OPPAR $$6 FuncHeaderAux  (28)
	$$5 : .  (26)

	.  reduce 26

	$$5  goto 29


state 18
	ProcHeader : PROCEDURE . ID OPPAR $$7 CLPAR SCOLON  (32)
	ProcHeader : PROCEDURE . ID OPPAR $$8 ParamList CLPAR SCOLON  (34)

	ID  shift 30
	.  error


state 19
	CompStat : OPBRACE . $$10 StatList CLBRACE  (40)
	$$10 : .  (39)

	.  reduce 39

	$$10  goto 31


state 20
	Prog : PROGRAM ID SCOLON $$1 Decls SubProgs CompStat .  (2)

	.  reduce 2


state 21
	SubProgs : SubProgs SubProgDecl .  (22)

	.  reduce 22


state 22
	SubProgDecl : Header . Decls CompStat  (23)
	Decls : .  (3)

	VAR  shift 6
	OPBRACE  reduce 3

	Decls  goto 32


state 23
	Header : FuncHeader .  (24)

	.  reduce 24


state 24
	Header : ProcHeader .  (25)

	.  reduce 25


state 25
	DeclList : DeclList Declaration .  (7)

	.  reduce 7


state 26
	Elem : ID . $$4 DimList  (17)
	$$4 : .  (16)

	.  reduce 16

	$$4  goto 33


state 27
	Declaration : Type ElemList . SCOLON  (8)
	ElemList : ElemList . COMMA $$3 Elem  (15)

	SCOLON  shift 34
	COMMA  shift 35
	.  error


state 28
	ElemList : Elem .  (13)

	.  reduce 13


state 29
	FuncHeader : FUNCTION $$5 . Type ID OPPAR $$6 FuncHeaderAux  (28)

	CHAR  shift 10
	FLOAT  shift 11
	INT  shift 12
	LOGIC  shift 13
	.  error

	Type  goto 36


state 30
	ProcHeader : PROCEDURE ID . OPPAR $$7 CLPAR SCOLON  (32)
	ProcHeader : PROCEDURE ID . OPPAR $$8 ParamList CLPAR SCOLON  (34)

	OPPAR  shift 37
	.  error


state 31
	CompStat : OPBRACE $$10 . StatList CLBRACE  (40)
	StatList : .  (41)

	.  reduce 41

	StatList  goto 38


state 32
	SubProgDecl : Header Decls . CompStat  (23)

	OPBRACE  shift 19
	.  error

	CompStat  goto 39


state 33
	Elem : ID $$4 . DimList  (17)
	DimList : .  (18)

	.  reduce 18

	DimList  goto 40


state 34
	Declaration : Type ElemList SCOLON .  (8)

	.  reduce 8


state 35
	ElemList : ElemList COMMA . $$3 Elem  (15)
	$$3 : .  (14)

	.  reduce 14

	$$3  goto 41


state 36
	FuncHeader : FUNCTION $$5 Type . ID OPPAR $$6 FuncHeaderAux  (28)

	ID  shift 42
	.  error


state 37
	ProcHeader : PROCEDURE ID OPPAR . $$7 CLPAR SCOLON  (32)
	ProcHeader : PROCEDURE ID OPPAR . $$8 ParamList CLPAR SCOLON  (34)
	$$7 : .  (31)
	$$8 : .  (33)

	CHAR  reduce 33
	FLOAT  reduce 33
	INT  reduce 33
	LOGIC  reduce 33
	CLPAR  reduce 31

	$$7  goto 43
	$$8  goto 44


state 38
	CompStat : OPBRACE $$10 StatList . CLBRACE  (40)
	StatList : StatList . Statement  (42)
	$$36 : .  (97)

	CALL  shift 45
	FOR  shift 46
	IF  shift 47
	READ  shift 48
	REPEAT  shift 49
	RETURN  shift 50
	WHILE  shift 51
	WRITE  shift 52
	OPBRACE  shift 19
	CLBRACE  shift 53
	SCOLON  shift 54
	ID  reduce 97

	CompStat  goto 55
	Statement  goto 56
	IfStat  goto 57
	WhileStat  goto 58
	RepeatStat  goto 59
	ForStat  goto 60
	ReadStat  goto 61
	WriteStat  goto 62
	AssignStat  goto 63
	CallStat  goto 64
	ReturnStat  goto 65
	$$36  goto 66


state 39
	SubProgDecl : Header Decls CompStat .  (23)

	.  reduce 23


state 40
	Elem : ID $$4 DimList .  (17)
	DimList : DimList . Dim  (19)

	OPBRAK  shift 67
	SCOLON  reduce 17
	COMMA  reduce 17

	Dim  goto 68


state 41
	ElemList : ElemList COMMA $$3 . Elem  (15)

	ID  shift 26
	.  error

	Elem  goto 69


state 42
	FuncHeader : FUNCTION $$5 Type ID . OPPAR $$6 FuncHeaderAux  (28)

	OPPAR  shift 70
	.  error


state 43
	ProcHeader : PROCEDURE ID OPPAR $$7 . CLPAR SCOLON  (32)

	CLPAR  shift 71
	.  error


state 44
	ProcHeader : PROCEDURE ID OPPAR $$8 . ParamList CLPAR SCOLON  (34)

	CHAR  shift 10
	FLOAT  shift 11
	INT  shift 12
	LOGIC  shift 13
	.  error

	Type  goto 72
	ParamList  goto 73
	Parameter  goto 74


state 45
	CallStat : CALL . ID OPPAR $$32 CLPAR SCOLON  (90)
	CallStat : CALL . ID OPPAR $$33 ExprList CLPAR SCOLON  (92)

	ID  shift 75
	.  error


state 46
	ForStat : FOR . OPPAR $$22 Variable ASSIGN $$23 Expression SCOLON $$24 Expression SCOLON $$25 Variable ASSIGN $$26 Expression CLPAR $$27 Statement  (76)

	OPPAR  shift 76
	.  error


state 47
	IfStat : IF . OPPAR $$11 Expression CLPAR $$12 $$13 Statement $$14 ElseStat  (58)

	OPPAR  shift 77
	.  error


state 48
	ReadStat : READ . OPPAR $$28 ReadList CLPAR SCOLON  (78)

	OPPAR  shift 78
	.  error


state 49
	RepeatStat : REPEAT . $$19 Statement WHILE OPPAR $$20 Expression CLPAR SCOLON $$21  (69)
	$$19 : .  (66)

	.  reduce 66

	$$19  goto 79


state 50
	ReturnStat : RETURN . $$34 SCOLON  (94)
	ReturnStat : RETURN . $$35 Expression SCOLON  (96)
	$$34 : .  (93)
	$$35 : .  (95)

	FALSE  reduce 95
	TRUE  reduce 95
	ID  reduce 95
	INTCT  reduce 95
	CHARCT  reduce 95
	FLOATCT  reduce 95
	NOT  reduce 95
	NEG  reduce 95
	OPPAR  reduce 95
	SCOLON  reduce 93

	$$34  goto 80
	$$35  goto 81


state 51
	WhileStat : WHILE . OPPAR $$16 Expression CLPAR $$17 $$18 Statement  (65)

	OPPAR  shift 82
	.  error


state 52
	WriteStat : WRITE . OPPAR $$30 WriteList CLPAR SCOLON  (83)

	OPPAR  shift 83
	.  error


state 53
	CompStat : OPBRACE $$10 StatList CLBRACE .  (40)

	.  reduce 40


state 54
	Statement : SCOLON .  (53)

	.  reduce 53


state 55
	Statement : CompStat .  (43)

	.  reduce 43


state 56
	StatList : StatList Statement .  (42)

	.  reduce 42


state 57
	Statement : IfStat .  (44)

	.  reduce 44


state 58
	Statement : WhileStat .  (45)

	.  reduce 45


state 59
	Statement : RepeatStat .  (46)

	.  reduce 46


state 60
	Statement : ForStat .  (47)

	.  reduce 47


state 61
	Statement : ReadStat .  (48)

	.  reduce 48


state 62
	Statement : WriteStat .  (49)

	.  reduce 49


state 63
	Statement : AssignStat .  (50)

	.  reduce 50


state 64
	Statement : CallStat .  (51)

	.  reduce 51


state 65
	Statement : ReturnStat .  (52)

	.  reduce 52


state 66
	AssignStat : $$36 . Variable ASSIGN $$37 Expression SCOLON $$38  (100)

	ID  shift 84
	.  error

	Variable  goto 85


state 67
	Dim : OPBRAK . INTCT CLBRAK  (20)

	INTCT  shift 86
	.  error


state 68
	DimList : DimList Dim .  (19)

	.  reduce 19


state 69
	ElemList : ElemList COMMA $$3 Elem .  (15)

	.  reduce 15


state 70
	FuncHeader : FUNCTION $$5 Type ID OPPAR . $$6 FuncHeaderAux  (28)
	$$6 : .  (27)

	.  reduce 27

	$$6  goto 87


state 71
	ProcHeader : PROCEDURE ID OPPAR $$7 CLPAR . SCOLON  (32)

	SCOLON  shift 88
	.  error


state 72
	Parameter : Type . ID  (38)

	ID  shift 89
	.  error


state 73
	ProcHeader : PROCEDURE ID OPPAR $$8 ParamList . CLPAR SCOLON  (34)
	ParamList : ParamList . COMMA $$9 Parameter  (37)
